test/files/neg/literate_existentials.check
literate_existentials.scala:189: error: implicit error;
!I e: Int <:< M
  Cannot prove that Int <:< M forSome { type M <: String }.

  implicitly[Int <:< (M forSome { type M >: Nothing <: String })] // fails
            ^
1 error
